syntax = "proto3";

package shared;

message ClientId {
    uint32 id = 1;
}