syntax = "proto3";

import public "AnimatedAppearanceComponent.proto";
import public "AppearanceComponent.proto";
import public "InputComponent.proto";
import public "MessageId.proto";
import public "MovementComponent.proto";
import public "PositionComponent.proto";
import public "SizeComponent.proto";

package shared;

message Entity {
    MessageId messageId = 1;
    uint32 id = 2;
    AnimatedAppearanceComponent animatedAppearance = 3;
    AppearanceComponent appearance = 4;
    PositionComponent position = 5;
    SizeComponent size = 6;
    MovementComponent movement = 7;
    InputComponent input = 8;
    uint32 updateWindow = 9;    // time in milliseconds
}
